--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ build/.grunt/ftpush/*
 build/files/data/sites/**/img/*
 build/files/data/sites/**/misc/robots.txt
 build/files/data/sites/**/misc/sitemap.xml
+build/tmp/
 
 #compilied files
 compiled.json
